bk_ida/gccida/c3/regrename_optimize
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:730:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v66; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:734:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v70; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:735:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions v71; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:762:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v98; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:838:6: error: use of undeclared identifier 'v174'
rtx *v174; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:843:6: error: use of undeclared identifier 'v179'
rtx *v179; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:845:6: error: use of undeclared identifier 'v181'
rtx *v181; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:853:6: error: use of undeclared identifier 'v189'
rtx *v189; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:864:6: error: use of undeclared identifier 'loc'
rtx *loc; // [rsp+40h] [rbp-218h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:899:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB60); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:900:41: error: use of undeclared identifier 'xmm'
v4 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB10); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:901:41: error: use of undeclared identifier 'xmm'
v5 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:902:41: error: use of undeclared identifier 'xmm'
v6 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB50); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:903:6: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v7 = ( __m128i)-1LL; 
     ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:904:41: error: use of undeclared identifier 'xmm'
v8 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB40); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:905:41: error: use of undeclared identifier 'xmm'
v9 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB00); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:906:42: error: use of undeclared identifier 'xmm'
v10 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FAF0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:907:42: error: use of undeclared identifier 'xmm'
v11 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB20); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/regrename.c:917:42: error: use of undeclared identifier 'xmm'
v11 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x71FB20); 
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/regrename_optimize/src/obj/regrename.o] Error 1
